# AppFlowy-Collab

./: .gitignore  Cargo.toml  Makefile.toml  README.md
appflowy-integrate/: Cargo.toml
appflowy-integrate/src/: collab_builder.rs  config.rs  lib.rs
collab/: Cargo.toml  MERGE_TODO.md  build.rs
collab-client-ws/: Cargo.toml
collab-client-ws/src/: error.rs  handler.rs  msg.rs  retry.rs  ws.rs
collab-database/: Cargo.toml
collab-database/src/: block.rs  database.rs  database_observer.rs  database_remapper.rs  database_serde.rs  database_state.rs  database_trait.rs  entity.rs  error.rs  lib.rs  macros.rs  util.rs
collab-database/src/blocks/: block.rs  mod.rs  queue.rs  task_controller.rs
collab-database/src/fields/: field.rs  field_id.rs  field_map.rs  field_observer.rs  field_settings.rs  mod.rs  type_option.rs
collab-database/src/id_gen/: database_id.rs  gen.rs  mod.rs
collab-database/src/meta/: meta_map.rs
collab-database/src/rows/: cell.rs  cell_builder.rs  comment.rs  mod.rs  row.rs  row_id.rs  row_map.rs  row_meta.rs  row_observer.rs
collab-database/src/template/: builder.rs  check_list_parse.rs  chect_list_parse.rs  csv.rs  date_parse.rs  entity.rs  media_parse.rs  mod.rs  number_parse.rs  option_parse.rs  relation_parse.rs  summary_parse.rs  time_parse.rs  timestamp_parse.rs  translate_parse.rs  util.rs
collab-database/src/user/: db_meta.rs  db_record.rs  db_relation.rs  mod.rs  user_db.rs  user_db_record.rs
collab-database/src/views/: calculation.rs  define.rs  field_order.rs  field_settings.rs  filter.rs  group.rs  layout.rs  layout_settings.rs  mod.rs  row_order.rs  sort.rs  view.rs  view_map.rs  view_observer.rs
collab-database/src/workspace_database/: body.rs  database_meta.rs  manager.rs  mod.rs
collab-database/tests/: main.rs
collab-database/tests/crud_test/: cell_test.rs  create_test.rs  field_test.rs  helper.rs  main.rs  row_test.rs  view_test.rs
collab-database/tests/database_test/: block_test.rs  cell_stringify_test.rs  cell_test.rs  encode_collab_test.rs  field_observe_test.rs  field_setting_test.rs  field_test.rs  filter_test.rs  group_test.rs  helper.rs  layout_test.rs  main.rs  meta_test.rs  mod.rs  restore_test.rs  row_observe_test.rs  row_test.rs  sort_test.rs  type_option_test.rs  view_observe_test.rs  view_test.rs
collab-database/tests/helper/: mod.rs  util.rs
collab-database/tests/history_database/: database_020_encode_collab
collab-database/tests/remapper/: database_remapper_test.rs  mod.rs
collab-database/tests/template_test/: create_template_test.rs  import_csv_test.rs  mod.rs
collab-database/tests/user_test/: cell_test.rs  create_test.rs  database_test.rs  delete_test.rs  helper.rs  main.rs  mod.rs  relation_test.rs  snapshot_test.rs  type_option_test.rs
collab-define/: Cargo.toml
collab-define/src/: collab_msg.rs  collab_object.rs  lib.rs  reminder.rs
collab-derive/: Cargo.toml
collab-derive/src/: collab.rs  lib.rs  yrs_token.rs
collab-derive/src/internal/: ast.rs  ctxt.rs  mod.rs
collab-document/: Cargo.toml
collab-document/src/: block.rs  document.rs  document_awareness.rs  document_data.rs  document_remapper.rs  error.rs  lib.rs  utils.rs
collab-document/src/block_parser/: block_parser.rs  document_parser.rs  mod.rs  registry.rs  text_utils.rs  traits.rs
collab-document/src/blocks/: attr_keys.rs  block.rs  block_data.rs  block_types.rs  blockv2.rs  children.rs  entities.rs  mod.rs  subscribe.rs  text.rs  text_entities.rs  utils.rs
collab-document/src/conversions/: mod.rs  plain_text.rs
collab-document/src/importer/: define.rs  delta.rs  md_importer.rs  mod.rs  util.rs
collab-document/tests/: main.rs  util.rs
collab-document/tests/block_parser/: bulleted_list_test.rs  callout_test.rs  code_block_test.rs  divider_test.rs  document_parser_test.rs  file_block_test.rs  heading_test.rs  image_test.rs  link_preview_test.rs  math_equation_test.rs  mod.rs  (+10 more)
collab-entity/: Cargo.toml  build.rs
collab-entity/proto/: common.proto  encoding.proto
collab-entity/src/: collab_msg.rs  collab_object.rs  define.rs  lib.rs  reminder.rs  schema.rs  uuid_validation.rs
collab-folder/: Cargo.toml  test_uuid_conversion_main.rs
collab-folder/184965030800789504/: db  snap.000000000000019E
collab-folder/src/: entities.rs  error.rs  favorites.rs  folder.rs  folder_diff.rs  folder_hierarchy.rs  folder_migration.rs  folder_observe.rs  hierarchy_builder.rs  lib.rs  macros.rs  relation.rs  revision.rs  section.rs  space_info.rs  trash.rs  view.rs  view_tree.rs  workspace.rs
collab-importer/: Cargo.toml
collab-importer/src/: error.rs  imported_collab.rs  lib.rs  space_view.rs  util.rs  zip_tool.rs
collab-importer/tests/: main.rs  util.rs  zip_tool.rs
collab-persistence/: Cargo.toml
collab-persistence/src/: db.rs  doc.rs  error.rs  keys.rs  lib.rs  oid.rs  range.rs  snapshot.rs
collab-persistence/tests/: doc_id_test.rs  main.rs  range_test.rs  restore_test.rs
collab-plugins/: Cargo.toml
collab-plugins/collab-plugins/: Cargo.toml
collab-plugins/collab-plugins-wasm/: Cargo.toml
collab-plugins/core/: Cargo.toml
collab-plugins/src/: connect_state.rs  lib.rs  sync_plugin.rs
collab-plugins/tests/: main.rs
collab-sync/: Cargo.toml
collab-sync-client/: Cargo.toml
collab-sync-client/src/: channel.rs  lib.rs  pending_msg.rs  sink.rs  sync.rs
collab-sync-protocol/: Cargo.toml
collab-sync-protocol/src/: lib.rs  msg.rs  protocol.rs
collab-sync/src/: channel_ext.rs  error.rs  lib.rs  message.rs  msg.rs  msg_codec.rs  protocol.rs
collab-user/: Cargo.toml
collab-user/src/: appearance.rs  entities.rs  lib.rs  reminder.rs  user_awareness.rs
collab-user/tests/: util.rs
collab-ws/: Cargo.toml
collab-ws/src/: error.rs  handler.rs  lib.rs  msg.rs  retry.rs  ws.rs
collab/src/: any_mut.rs  collab.rs  collab_plugin.rs  entity.rs  error.rs  lib.rs  lock.rs  map_wrapper.rs  util.rs
collab/tests/: csv_date_import_test.rs
collab_bin/: Cargo.toml
collab_bin/src/: main.rs
importer/: Cargo.toml
importer/src/: error.rs  lib.rs
importer/tests/: import_test.rs  main.rs  util.rs
(+753 files in other folders)
