[workspace]
members = ["collab"]
resolver = "2"

[workspace.dependencies]
yrs = { version = "0.24", features = ["sync"] }
anyhow = "1.0.94"
thiserror = "1.0.39"
serde = { version = "1.0.157", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.48", features = ["sync"] }
bytes = "1.10.1"
tracing = "0.1.41"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
async-trait = "0.1"
arc-swap = { version = "1.7" }
uuid = { version = "1.17.0", features = ["v4", "v5", "v7", "serde"] }
futures-lite = { version = "2.6.0", features = ["futures-io"] }
blake3 = "1.8"

[patch.crates-io]
# We're using a specific commit here because rust-rocksdb doesn't publish the latest version that includes the memory alignment fix.
# For more details, see https://github.com/rust-rocksdb/rust-rocksdb/pull/868
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "1710120e4549e04ba3baa6a1ee5a5a801fa45a72" }
