[package]
name = "appflowy-integrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab = { path = "../collab" }
collab-persistence= { path = "../collab-persistence" }
collab-folder = { path = "../collab-folder" }
collab-database= { path = "../collab-database" }
collab-plugins= { path = "../collab-plugins", features = ["disk_rocksdb", "postgres_storage", "aws_storage"] }
collab-document = { path = "../collab-document" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.71"

[features]
default = []