[package]
name = "appflowy-integrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab = { path = "../collab" }
collab-persistence = { path = "../collab-persistence", features = ["rocksdb_persistence"] }
collab-folder = { path = "../collab-folder" }
collab-database = { path = "../collab-database" }
collab-plugins = { path = "../collab-plugins" }
collab-document = { path = "../collab-document" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
parking_lot = "0.12.1"

[features]
default = ["postgres_storage_plugin", "aws_storage_plugin", "snapshot_plugin"]
postgres_storage_plugin = ["collab-plugins/postgres_storage_plugin", "collab-plugins/rocksdb_plugin"]
aws_storage_plugin = ["collab-plugins/aws_storage_plugin", "collab-plugins/rocksdb_plugin"]
snapshot_plugin = ["collab-plugins/snapshot_plugin"]