[package]
name = "collab-client-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1", feature = ["log"] }
thiserror = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = { version = "0.18" }
tokio = { version = "1.26", features = ["full"] }
futures-util = "0.3.26"
tokio-retry = "0.3"
bytes = "1.0"
tokio-stream = { version = "0.1.14", features = ["sync"] }
collab-sync = { path = "../collab-sync" }