[package]
name = "collab-database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
collab = { workspace = true }
collab-persistence = { workspace = true }
collab-entity = { workspace = true }
collab-plugins = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_repr = "0.1"
parking_lot.workspace = true
tokio = { version = "1.26", features = ["rt", "sync"] }
tracing.workspace = true
nanoid = "0.4.0"
chrono.workspace = true
lazy_static = "1.4.0"
lru = "0.12.0"
async-trait.workspace = true
uuid = { version = "1.3.3", features = ["v4", "v5"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
strum = "0.25"
strum_macros = "0.25"

[dev-dependencies]
collab-plugins = { workspace = true, features = ["rocksdb_plugin"] }
tempfile = "3.8.0"
tokio = { version = "1.26", features = ["sync"] }
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
rand = "0.8.4"
futures = "0.3.18"
zip = "0.6.6"

[features]
enable_wasm = []