[package]
name = "collab-database"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
collab = { workspace = true }
collab-entity = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_repr = "0.1"
tokio = { workspace = true, features = ["time", "sync", "rt"] }
tracing.workspace = true
nanoid = "0.4.0"
chrono.workspace = true
lazy_static = "1.4.0"
async-trait.workspace = true
uuid = { version = "1.3.3", features = ["v4", "v5"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
strum = "0.25"
strum_macros = "0.25"
rayon = "1.10.0"
dashmap = "5"
futures = "0.3.30"
csv = { version = "1.3.0" }
yrs.workspace = true
tokio-util = "0.7"
rusty-money = { version = "0.4.1", features = ["iso"] }
fancy-regex = "0.13.0"
rust_decimal = "1.36.0"
chrono-tz = "0.10.0"
percent-encoding = "2.3.1"
sha2 = "0.10.8"
base64 = "0.22.1"
iana-time-zone = "0.1.61"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"

[dev-dependencies]
collab-plugins = { workspace = true, features = ["verbose_log"] }
collab-database = { path = "../collab-database", features = ["verbose_log"] }
tempfile = "3.8.0"
assert-json-diff = "2.0.2"
lazy_static = "1.4.0"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
rand = "0.8.4"
futures = "0.3.30"
zip = "0.6.6"
tokio = { version = "1.38", features = ["full"] }


[features]
verbose_log = []
import_csv = []
