[package]
name = "collab-define"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_repr = "0.1"
collab = { version = "0.1.0", path = "../collab" }
anyhow = "1.0.75"