[package]
name = "collab-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.109", features = ["extra-traits", "visit"] }
yrs = "0.16.5"
serde_json = "1.0.94"

[dev-dependencies]
collab-derive = { path = "."}

[lib]
name = "collab_derive"
proc-macro = true
