[package]
name = "collab-derive"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.109", features = ["extra-traits", "visit"] }
yrs.workspace = true
serde_json.workspace = true

[lib]
name = "collab_derive"
proc-macro = true
