[package]
name = "collab-document"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
collab = { workspace = true }
collab-entity = { workspace = true }
serde.workspace = true
serde_json.workspace = true
nanoid = "0.4.0"
thiserror = "1.0.30"
anyhow.workspace = true
tracing.workspace = true
arc-swap.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.3.3", features = ["v4", "v5"] }
markdown = "1.0.0-alpha.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
tokio = { version = "1.26", features = ["macros", "rt"] }
tempfile = "3.8.0"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
collab-plugins = { workspace = true }
zip = "0.6.6"
futures = "0.3.30"
assert-json-diff = "2.0.2"
yrs.workspace = true

[features]
verbose_log = []
