[package]
name = "collab-entity"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid = { version = "1.3.3", features = ["v4"] }
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
collab = { workspace = true }
anyhow.workspace = true
bytes = { workspace = true, features = ["serde"] }
prost = "0.13.3"
thiserror = "1.0.61"

[build-dependencies]
prost-build = "0.12"
walkdir = ">=2.0.0"
protoc-bin-vendored = "3.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


