[package]
name = "collab-entity"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uuid.workspace = true
serde.workspace = true
serde_repr = "0.1"
collab = { workspace = true }
anyhow.workspace = true
thiserror = "1.0.61"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }


