[package]
edition = "2021"
name = "collab-folder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
collab = {path = "../collab"}
collab-derive = {path = "../collab-derive"}
collab-persistence = {path = "../collab-persistence"}
parking_lot = "0.12.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.94"
serde_repr = "0.1"
thiserror = "1.0.30"
tokio = {version = "1.26", features = ["rt", "sync"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
tracing = {version = "0.1", features = ["log"]}

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = {path = "../collab-plugins", features = ["rocksdb_plugin"]}
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.4.0"
tokio = {version = "1.26", features = ["full"]}
tracing-subscriber = {version = "0.3.3", features = ["env-filter"]}
walkdir = "2.3.2"
zip = "0.6.6"
