[package]
edition = "2021"
name = "collab-folder"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
chrono.workspace = true
collab = {path = "../collab" }
collab-derive = {path = "../collab-derive" }
collab-persistence = { workspace = true }
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
thiserror = "1.0.30"
tokio = {version = "1.26", features = ["rt", "sync"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
tracing.workspace = true

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = { workspace = true, features = ["rocksdb_plugin"]}
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.8.0"
tokio = {version = "1.26", features = ["full"]}
tracing-subscriber = {version = "0.3.3", features = ["env-filter"]}
walkdir = "2.3.2"
zip = "0.6.6"
