[package]
edition = "2024"
name = "collab-folder"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
collab = { workspace = true }
collab-entity.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
thiserror = "1.0.30"
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing.workspace = true
dashmap = "5"
arc-swap = "1.7"
uuid = "1.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = { workspace = true }
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.8.0"
tokio = { version = "1.26", features = ["rt", "macros"] }
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
walkdir = "2.3.2"
zip = "0.6.6"
uuid = { version = "1.6.1", features = ["v4"] }
futures = "0.3.30"
