[package]
name = "collab-importer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab-folder = { workspace = true }
collab-database = { workspace = true }
collab-document = { workspace = true }
collab = { workspace = true }
collab-entity = { workspace = true }
thiserror.workspace = true
anyhow.workspace = true
chrono.workspace = true
walkdir = "2.5.0"
uuid = "1.6.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
markdown = "1.0.0-alpha.21"
tracing.workspace = true
percent-encoding = "2.3.1"
fancy-regex = "0.13.0"
fxhash = "0.2.1"
tokio = { workspace = true, features = ["io-util", "fs"] }
tokio-util = "0.7"
rayon = "1.10.0"
sha2 = "0.10.8"
base64 = "0.22.1"
hex = "0.4.3"
async_zip = { version = "0.0.17", features = ["full"] }
async-trait.workspace = true
futures = "0.3.30"
async-recursion = "1.1"
futures-util = "0.3.30"
futures-lite = "2.3.0"
sanitize-filename = "0.5.0"
zip = "0.6.6"
csv = { version = "1.3.0" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["full"] }
nanoid = "0.4.0"
assert-json-diff = "2.0.2"
tempfile = "3.10.1"
