[package]
name = "collab-persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab = { path = "../collab"}
rocksdb = { version = "0.21.0", optional = true, default-features = false, features = ["zstd"] }
thiserror = "1.0.30"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
lib0 = { version = "0.16.3", features = ["lib0-serde"] }
yrs = "0.16.5"
smallvec = { version = "1.10", features = ["write", "union", "const_generics", "const_new"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tokio = { version = "1.26", features = ["rt", "sync"] }
tracing = { version = "0.1.37" }
parking_lot = "0.12.1"
lazy_static = "1.4.0"
async-trait = "0.1.73"

[dev-dependencies]
collab-persistence = { path = ".", features = ["rocksdb_persistence"] }
tempfile = "3.8.0"
futures = "0.3.18"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.26", features = ["full"] }
test-case = "3.1.0"

[features]
default = []
rocksdb_persistence = ["rocksdb"]