[package]
name = "collab-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs.workspace = true

#collab
collab = { workspace = true }
collab-entity = { workspace = true }
collab-persistence = { workspace = true, optional = true }

futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.26.0", features = ["sync"] }
tracing.workspace = true
parking_lot.workspace = true

anyhow.workspace = true
tokio-retry = "0.3"
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand = { version = "0.8" }
similar = { version = "2.2.1" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.3.3", features = ["v4"] }
bytes.workspace = true

[dev-dependencies]
collab-plugins = { workspace = true, features = ["rocksdb_plugin", "snapshot_plugin"] }
tempfile = "3.8.0"
assert-json-diff = "2.0.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.26.0", features = ["macros", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
dashmap = "5.4.0"
nanoid = "0.4.0"
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
dotenv = "0.15.0"
futures = "0.3.17"
chrono.workspace = true


[features]
default = ["postgres_storage_plugin"]
rocksdb_plugin = ["collab-persistence/rocksdb_persistence"]
postgres_storage_plugin = ["collab-persistence/rocksdb_persistence"]
snapshot_plugin = ["collab-persistence/rocksdb_persistence"]
