[package]
name = "collab-plugins"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yrs.workspace = true
collab = { workspace = true }
collab-entity = { workspace = true }

futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.26.0", features = ["sync", "rt"] }
tracing.workspace = true
parking_lot.workspace = true
anyhow.workspace = true

tokio-retry = "0.3"
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
similar = { version = "2.2.1" }
tokio-stream = { version = "0.1.14", features = ["sync"] }
uuid = { version = "1.3.3", features = ["v4"] }
bytes.workspace = true
rand = { version = "0.8", optional = true }
lazy_static = "1.4.0"
smallvec = { version = "1.10", features = ["write", "union", "const_generics", "const_new"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
bincode = "1.3.3"
getrandom = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rocksdb = { version = "0.21.0", default-features = false, features = ["zstd"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { version = "0.4.1" }
wasm-bindgen = "0.2"
js-sys = "0.3"
async-stream = "0.3.4"
futures = "0.3"

[dev-dependencies]
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.26.0", features = ["macros"] }
rand = { version = "0.8" }
tempfile = "3.8.0"
assert-json-diff = "2.0.2"
tokio-util = { version = "0.7", features = ["codec"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
dotenv = "0.15.0"
wasm-bindgen-test = "0.3.40"
futures = "0.3"

[features]
default = []
postgres_plugin = ["rand"]
wasm_build = ["getrandom/js", "collab/async-plugin"]