[package]
name = "collab-sync-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs = "0.16.5"
y-sync = { version = "0.3.1" }
collab = { path = "../collab" }
lib0 = "0.16.3"
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1.26.0", features = ["sync"] }
parking_lot = "0.12.1"
tracing = { version = "0.1" }
thiserror = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.4"
tokio-stream = { version = "0.1.14" }
collab-sync-protocol = { path = "../collab-sync-protocol" }


