[package]
name = "collab-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.94"
anyhow = "1.0"
collab = {path = "../collab"}
collab-define = {path = "../collab-define"}
tokio = {version = "1.26", features = ["rt", "sync"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
tracing = {version = "0.1", features = ["log"]}
parking_lot = "0.12.1"

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = {path = "../collab-plugins", features = ["rocksdb_plugin"]}
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.4.0"
tokio = {version = "1.26", features = ["full"]}
