[package]
name = "collab-user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
collab = {path = "../collab" }
collab-entity = { workspace = true }
tokio = {version = "1.26", features = ["rt", "sync"]}
tokio-stream = {version = "0.1.14", features = ["sync"]}
tracing.workspace = true
parking_lot.workspace = true
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = { workspace = true }
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.8.0"
tokio = {version = "1.26", features = ["rt", "macros"]}


[features]
wasm_build = ["getrandom/js"]