[package]
name = "collab-user"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
collab = { workspace = true }
collab-entity = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
assert-json-diff = "2.0.2"
collab-plugins = { workspace = true }
fs_extra = "1.2.0"
nanoid = "0.4.0"
tempfile = "3.8.0"
tokio = { version = "1.26", features = ["rt", "macros"] }
uuid = "1.3.3"
