[package]
name = "collab-ws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1" }
thiserror = "1.0.39"
serde = { version = "1.0", features = ["derive"] }
tokio-tungstenite = "0.18"
tokio = { version = "1.26", features = ["full"] }
tokio-retry = "0.3"
pin-project = "1.0.12"