[package]
name = "collab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yrs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
parking_lot.workspace = true
bytes = { workspace = true, features = ["serde"] }
tracing.workspace = true
tokio = { version = "1.26", features = ["time", "sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait.workspace = true
bincode = "1.3.3"
serde_repr = "0.1"


[dev-dependencies]
tokio = { version = "1.26", features = ["full"] }
tempfile = "3.8.0"
collab = { path = "", features = ["default"] }
nanoid = "0.4.0"
chrono.workspace = true
assert-json-diff = "2.0.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }

[features]
default = []
async-plugin = []