[package]
name = "collab"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yrs.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
bytes = { workspace = true, features = ["serde"] }
tracing.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
async-trait.workspace = true
arc-swap.workspace = true
bincode = "1.3.3"
serde_repr = "0.1"
chrono = "0.4.22"
unicode-segmentation = "1.10.1"
lazy_static = "1.4.0"
fastrand = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3" }
js-sys = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "sync", "rt"] }
tempfile = "3.8.0"
collab = { path = "", features = ["default"] }
nanoid = "0.4.0"
chrono.workspace = true
assert-json-diff = "2.0.2"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
assert_matches2 = "0.1.2"

[features]
default = []
verbose_log = []
trace_transact = []
lock_timeout = []
rwlock_reason = []