[package]
name = "collab_bin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
collab.workspace = true
rand = { version = "0.8", features = ["std_rng"] }
yrs.workspace = true
tokio = { version = "1", features = ["full"] }